Deploy Vue Cinema

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="./img/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/media.css">
-    <title>Vue-Cinema</title>
+    <title>Vue-Cinema GitHub</title>
 </head>
 
 <body>
